# ios-cmake

./: .gitmodules  CMakeLists.txt  ViewController.m  prepare_ios_simulator.sh
tests/: CMakeLists.txt  Tests.m
